2008-04-22  Kevin Zembower <kzembowe@jhuccp.org>
	* man/xml-source/amflush.8.xml: add amflush example

2008-04-22  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Move all device access from
	  tape_device_open_device to tape_device_read_label.
	  tape_device_start read the label if it is not already read.
	* device-src/vfs-device.c (vfs_device_open_device): remove read of the
							    label.

2008-04-22  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c (check_resetofs): Compilation fix if
						     NEED_RESETOFS is defined.
	* device-src/tape-posix.c: Handle no ENOMEDIUM.

2008-04-21  Dan Locks <dwlocks@zmanda.com>
	* packaging/deb/buildpkg: modified build script to create unsigned
	  packages

2008-04-21  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-lib.sh.in (amdevcheck_status):
	  Set amdevcheck_message.
	* changer-src/chg-chs.sh, changer-src/chg-juke.sh,
	  changer-src/chg-manual.sh, changer-src/chg-zd-mtx.sh,
	  changer-src/chg-multi.sh: Output amdevcheck_message
	* device-src/device.c: Set errmsg and status.
	  device_open always return a device, the status and errmsg are set.
	* device-src/device.h: Define DeviceStatusFlags.
	* device-src/null-device.c, device-src/s3-device.c,
	  device-src/tape-device.c, device-src/vfs-device.c,
	  device-src/rait-device.c: Set errmsg and status.
	* device-src/tape-posix.c: Return status for VOLUME_MISSING.
	* device-src/tape-ops.h: Remove TapeCheckResult.
	* server-src/taper-source.h (_TaperSource): Add errmsg.
	* server-src/taper-source.c: Set errmsg
	* server-src/amcheck.c, server-src/amtape.c, server-src/amlabel.c,
	  server-src/taperscan.c, restore-src/amrestore.c,
	  restore-src/restore.c: Use status and errmsg of a device.
	* server-src/taper-disk-port-source.c: Set errmsg.
	* server-src/reporter.c: Fix parsing of taper PARTIAL line.
	* server-src/taper.c: Use errmsg for device and _TaperSource.
	* server-src/taper-file-source.c: Set errmsg.